@@ -1,3 +1,10 @@
+Mon Nov 29 10:15:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * tests/IDL_Test/NonTopic_Connector/descriptors:
+        * tests/IDL_Test/NonTopic_Connector/descriptors/DeploymentPlan.cdp:
+        * tests/IDL_Test/NonTopic_Connector/descriptors/run_test.pl:
+	Add deployment and run script.
+
 Fri Nov 26 22:35:09 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.idl:
